RESOLVED FIXED201796
[LFC] FormattingContext::Geometry::inlineReplacedHeightAndMargin should not read containing block's width
https://bugs.webkit.org/show_bug.cgi?id=201796
Summary [LFC] FormattingContext::Geometry::inlineReplacedHeightAndMargin should not r...
alan
Reported 2019-09-14 06:15:58 PDT
Attachments
Patch (19.51 KB, patch)
2019-09-14 06:18 PDT, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-09-14 06:16:39 PDT
alan
Comment 2 2019-09-14 06:18:47 PDT
alan
Comment 3 2019-09-14 11:06:03 PDT
Note You need to log in before you can comment on or make changes to this bug.